# tinymsdf

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.c  main.cpp  tinymsdf.c  tinymsdf.cpp  tinymsdf.h  tinymsdf.hpp
src/: tinymsdf.cpp  tinymsdf.hpp
